# zetapp

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.tsx  tailwind.config.js  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: endpoints.rs  lib.rs  main.rs  settings.rs  worker.rs
src-tauri/src/zte/: errors.rs  mc889.rs  mf283.rs  mod.rs
src/components/: ConnectionSignal.tsx  ConnectionStatus.tsx  ErrorHandler.tsx  NoConnection.tsx
src/pages/: Parameters.tsx  Settings.tsx  Stats.tsx
src/store/: actions.ts  data.ts  store.ts
